<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginParent"
    android:background="@drawable/one_gradient"
    android:orientation="vertical"
    tools:context=".Activity.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgLogo"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/new_heart" />


        <androidx.cardview.widget.CardView
            android:id="@+id/containerLogin"
            android:layout_width="280dp"
            android:layout_height="420dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:elevation="5dp"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/loginCardRadius">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/two_gradient"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/autour_one"
                    android:text="@string/Welcome"
                    android:textAlignment="center"
                    android:textColor="#B25E1591"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text">

                    <EditText
                        android:id="@+id/u_email"
                        style="@style/modifiedEditText"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_email_new"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:drawablePadding="12dp"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/edit_text">

                    <EditText
                        android:id="@+id/u_password"
                        style="@style/modifiedEditText"
                        android:drawableStart="@drawable/icon_pass"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/u_login"
                    style="@style/loginButton"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:text="Sign In" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/u_sign_up_txt"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_people_black_24dp"/>

                    <TextView
                        android:id="@+id/u_sign_up_tx"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#673580"
                        android:fontFamily="@font/autour_one"
                        android:layout_marginStart="3dp"
                        android:text="@string/login_signup_hint"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>