<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:background="@color/whiteCardColor"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:textColor="#B25E1591"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="25dp"
            android:text="Join The Community" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:background="@drawable/edit"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/p_name"
                style="@style/modifiedEditText"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/icon_email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawablePadding="12dp"
                android:hint="Name"
                android:inputType="textPersonName|textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:background="@drawable/edit"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/p_email"
                style="@style/modifiedEditText"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_email_new"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawablePadding="12dp"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:background="@drawable/edit"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/p_pass"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/icon_pass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:background="@drawable/edit"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/con_pass"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/icon_pass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gender"
                android:textColor="#000"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/patient_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <RadioButton
                    android:id="@+id/patient_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:saveEnabled="true"
                    android:checked="true"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/patiant_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </RadioGroup>

        </LinearLayout>


        <Button
            android:id="@+id/p_register"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Register" />


    </LinearLayout>


</androidx.cardview.widget.CardView>